{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 11,
  "lineage": "4fb90634-7173-85ec-adea-ee483fd29a56",
  "resources": [
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02693bc95c83079cd",
            "arn": "arn:aws:ec2:us-east-2:238564712748:elastic-ip/eipalloc-02693bc95c83079cd",
            "domain": "vpc",
            "id": "eipalloc-02693bc95c83079cd",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-138-211-123.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.211.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02693bc95c83079cd",
            "association_id": "eipassoc-0d4b5d716f1f06fc7",
            "connectivity_type": "public",
            "id": "nat-03541437771e22d6b",
            "network_interface_id": "eni-012602c03c1e6fdb1",
            "private_ip": "10.0.1.6",
            "public_ip": "3.138.211.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0527e270201f782",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.nat",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238564712748:route-table/rtb-031caf15ce8e6eb97",
            "id": "rtb-031caf15ce8e6eb97",
            "owner_id": "238564712748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03541437771e22d6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d90ac2789344f2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat-gateway.aws_eip.nat",
            "module.nat-gateway.aws_nat_gateway.this",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238564712748:route-table/rtb-0e9f6fa7353483ee2",
            "id": "rtb-0e9f6fa7353483ee2",
            "owner_id": "238564712748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02abf01dce8ba8bf0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d90ac2789344f2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ca9f858f113182",
            "route_table_id": "rtb-031caf15ce8e6eb97",
            "subnet_id": "subnet-0e67d5955ac3d38e4"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.nat",
            "module.nat-gateway.aws_nat_gateway.this",
            "module.route-table.aws_route_table.private",
            "module.subnet.aws_subnet.private",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c65a4e858e06ca42",
            "route_table_id": "rtb-0e9f6fa7353483ee2",
            "subnet_id": "subnet-0d0527e270201f782"
          },
          "dependencies": [
            "module.route-table.aws_route_table.public",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238564712748:subnet/subnet-0e67d5955ac3d38e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e67d5955ac3d38e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238564712748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-07d90ac2789344f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238564712748:subnet/subnet-0d0527e270201f782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0527e270201f782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238564712748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-07d90ac2789344f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238564712748:internet-gateway/igw-02abf01dce8ba8bf0",
            "id": "igw-02abf01dce8ba8bf0",
            "owner_id": "238564712748",
            "tags": {
              "Name": "cameroon-vpc-igw"
            },
            "tags_all": {
              "Name": "cameroon-vpc-igw"
            },
            "vpc_id": "vpc-07d90ac2789344f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238564712748:vpc/vpc-07d90ac2789344f2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4cba1186216d697",
            "default_route_table_id": "rtb-09278367c4a5c9f07",
            "default_security_group_id": "sg-06ba5e0e066418257",
            "dhcp_options_id": "dopt-0311c8c77326366b2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d90ac2789344f2a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09278367c4a5c9f07",
            "owner_id": "238564712748",
            "tags": {
              "Name": "cameroon-vpc"
            },
            "tags_all": {
              "Name": "cameroon-vpc"
            }
          }
        }
      ]
    }
  ]
}